<resources>
    <string name="app_name">News Aggregator</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="cancel">Cancel</string>
    <string name="new_articles_available">New articles available</string>

    <string name="top_headlines">Top Headlines</string>
    <string name="my_news">My News</string>

    <string name="now">Now</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="day_ago">day ago</string>
    <string name="days_ago">days ago</string>

    <!-- Login Activity -->
    <string name="example_at_example_dot_com">example@example.com</string>
    <string name="your_password">Your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="enter_email_and_password">Enter email and password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="registration_failed">Registration failed</string>

    <!-- Search Activity -->
    <string name="search_query">Search query</string>
    <string name="search_in">Search in</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="date_range">Date range</string>
    <string name="from_date">From (Date)</string>
    <string name="from_time">From (Time)</string>
    <string name="to_date">To (Date)</string>
    <string name="to_time">To (Time)</string>
    <string name="invalid_input">Invalid input</string>

    <!-- Article Detail -->
    <string name="view_online">View Online</string>

    <!-- Preferences -->
    <string name="preferences_category_general">General</string>
    <string name="preferences_category_language_and_region">Language &amp; Region</string>
    <string name="preferences_category_language_and_region_app_language">Application Language</string>
    <string name="preferences_category_language_and_region_news_feed_country">News Feed Country</string>

    <string name="preferences_category_topics">Topics</string>
    <string name="preferences_category_topics_summary">Choose topics you want to get headlines for</string>
    <string name="preferences_category_notifications">Notifications</string>
    <string name="preferences_category_notifications_summary">Choose topics you want to get notifications for</string>

    <!-- Categories -->
    <string name="general">General</string>
    <string name="business">Business</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="sports">Sports</string>
    
    <!-- General Preferences -->
    <string name="auto_refresh">Auto Refresh</string>
    <string name="refresh_interval">Refresh Interval</string>

    <string name="days_1">1 day</string>
    <string name="days_2">2 days</string>
    <string name="days_3">3 days</string>
    <string name="days_7">7 days</string>
    <string name="days_14">14 days</string>

    <string name="minutes_30">30 minutes</string>
    <string name="hours_1">1 hour</string>
    <string name="hours_2">2 hours</string>
    <string name="hours_3">3 hours</string>
    <string name="hours_6">6 hours</string>
    <string name="hours_12">12 hours</string>
    <string name="hours_24">24 hours</string>

    <!-- Language & Region Preferences (Application Language) -->
    <string name="application">Application</string>
    <string name="language">Language</string>
    <string name="select_language">Select language</string>
    <string name="english_uk">English (UK)</string>

    <!-- Language & Region Preferences (Country) -->
    <string name="news_feed">News Feed</string>
    <string name="country">Country</string>

    <string name="all_languages">All languages</string>
    <string name="arabic">Arabic</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="hebrew">Hebrew</string>
    <string name="italian">Italian</string>
    <string name="dutch">Dutch</string>
    <string name="norwegian">Norwegian</string>
    <string name="portuguese">Portuguese</string>
    <string name="russian">Russian</string>
    <string name="swedish">Swedish</string>
    <string name="chinese">Chinese</string>

    <string name="all_countries">All Countries</string>
    <string name="united_arab_emirates">United Arab Emirates</string>
    <string name="argentina">Argentina</string>
    <string name="austria">Austria</string>
    <string name="australia">Australia</string>
    <string name="belgium">Belgium</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="brazil">Brazil</string>
    <string name="canada">Canada</string>
    <string name="switzerland">Switzerland</string>
    <string name="china">China</string>
    <string name="colombia">Colombia</string>
    <string name="cuba">Cuba</string>
    <string name="czechia">Czechia</string>
    <string name="germany">Germany</string>
    <string name="egypt">Egypt</string>
    <string name="france">France</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="greece">Greece</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="hungary">Hungary</string>
    <string name="indonesia">Indonesia</string>
    <string name="ireland">Ireland</string>
    <string name="israel">Israel</string>
    <string name="india">India</string>
    <string name="italy">Italy</string>
    <string name="japan">Japan</string>
    <string name="korea">Korea</string>
    <string name="lithuania">Lithuania</string>
    <string name="latvia">Latvia</string>
    <string name="morocco">Morocco</string>
    <string name="mexico">Mexico</string>
    <string name="malaysia">Malaysia</string>
    <string name="nigeria">Nigeria</string>
    <string name="netherlands">Netherlands</string>
    <string name="norway">Norway</string>
    <string name="new_zealand">New Zealand</string>
    <string name="philippines">Philippines</string>
    <string name="poland">Poland</string>
    <string name="portugal">Portugal</string>
    <string name="romania">Romania</string>
    <string name="serbia">Serbia</string>
    <string name="russia">Russia</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="sweden">Sweden</string>
    <string name="singapore">Singapore</string>
    <string name="slovenia">Slovenia</string>
    <string name="slovakia">Slovakia</string>
    <string name="thailand">Thailand</string>
    <string name="turkey">Turkey</string>
    <string name="taiwan">Taiwan</string>
    <string name="ukraine">Ukraine</string>
    <string name="united_states">United States</string>
    <string name="venezuela">Venezuela</string>
    <string name="south_africa">South Africa</string>

    <!-- Notifications Preferences -->
    <string name="enable_notifications">Enable Notifications</string>

    <string name="email">Email</string>
    <string name="category_name">Category name</string>
</resources>