<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/preferences_category_notifications"
        app:summary="@string/preferences_category_notifications_summary"
        app:iconSpaceReserved="false">

        <SwitchPreference
            app:key="enable_notifications"
            app:title="@string/enable_notifications"
            app:icon="@drawable/ic_baseline_notifications_active_24"
            app:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/top_headlines"
        app:iconSpaceReserved="false"
        app:dependency="enable_notifications">

        <SwitchPreferenceCompat
            app:key="preferences_notification_top_headlines"
            app:title="@string/top_headlines"
            app:icon="@drawable/ic_baseline_newspaper_24"
            app:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preferences_category_topics"
        app:iconSpaceReserved="false"
        app:dependency="enable_notifications">

        <SwitchPreferenceCompat
            app:key="preferences_notification_general"
            app:title="@string/general"
            app:icon="@drawable/ic_baseline_article_24"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="preferences_notification_business"
            app:title="@string/business"
            app:icon="@drawable/ic_baseline_business_24"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="preferences_notification_technology"
            app:title="@string/technology"
            app:icon="@drawable/ic_baseline_computer_24"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="preferences_notification_science"
            app:title="@string/science"
            app:icon="@drawable/ic_baseline_science_24"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="preferences_notification_health"
            app:title="@string/health"
            app:icon="@drawable/ic_baseline_medical_services_24"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="preferences_notification_entertainment"
            app:title="@string/entertainment"
            app:icon="@drawable/ic_baseline_mood_24"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="preferences_notification_sports"
            app:title="@string/sports"
            app:icon="@drawable/ic_baseline_directions_run_24"
            app:defaultValue="true" />

    </PreferenceCategory>
</PreferenceScreen>