<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_main">
        <item
            android:id="@+id/menu_main_search"
            android:title="@string/search"
            android:icon="@drawable/ic_baseline_search_24"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_main_refresh"
            android:title="@string/refresh"
            android:icon="@drawable/ic_baseline_refresh_24"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_main_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_search_24" />
    </group>

    <group android:id="@+id/menu_logout">
        <item
            android:id="@+id/menu_main_logout"
            android:title="@string/logout"/>
    </group>
</menu>