<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" >

    <PreferenceCategory
        app:title="@string/preferences_category_language_and_region_app_language"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="preferences_language"
            app:title="@string/language"
            app:icon="@drawable/ic_baseline_language_24"
            app:entries="@array/preferences_category_language_and_region_language_list_entries"
            app:entryValues="@array/preferences_category_language_and_region_language_list_values"
            app:defaultValue="english_uk"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/news_feed"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="preferences_country"
            app:title="@string/country"
            app:icon="@drawable/ic_baseline_flag_24"
            app:entries="@array/preferences_category_language_and_region_countries_list_entries"
            app:entryValues="@array/preferences_category_language_and_region_countries_list_values"
            app:defaultValue="gb"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>